@@ -1,3 +1,9 @@
+1998-01-27  Marcus G. Daniels  <mgd@grasshopper.santafe.edu>
+
+	* global.h (initSwarm): Constify argv.
+	* simtools.h: Likewise.
+	* simtools.m (initSwarm): Likewise.
+
 1998-01-27  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
 
 	* MessageProbeWidget.m: Include defobj.h.  Don't include stdio.h,
